Dec 25 2003  3.1.0  More README updates
                    Smarter handling of garbage gps values in gpsd
                    Added association of probe networks based on data exchange
                     with a BSSID
                    Fixed segfault in panels client with autogroup probe 
                     network
Dec 24 2003  3.1.0  More README updates
                    More invalid packet detection for drivers that feed us junk
                    Fixed FCS on orinoco
                    Actually fixed FCS
                    Fixed statically defined wepkey size that introduced
                     failures, actually merged wep key resize into config.h.in
                    Removed stray debug string
                    Added GPSD reconnect code
Dec 23 2003  3.1.0  Added DupeIV display to panels client
Dec 22 2003  3.1.0  Increased max wep key size to 32 hex pairs
                    Fixed gpsmap dupeiv
                    Revamped gpsmap power level colormap assignment
Dec 21 2003  3.1.0  Added discarding of large management and phy frames as an
                     effort to minimize the impact of junk frames from some
                     drivers.
                    Fixed errors in sourcetracker when child processes aren't
                     used
                    Fixed display of card levels in panel client
                    Fixed fetching of signal levels from cisco cards (for
                     whatever thats worth since they lie)
Dec 19 2003  3.1.0  Changed some viha stuff, maybe fixed some problems.
                    Made child channel control spawning far more intelligent
                    Merged viha into root process, forced disable of setuid
                     dropping when using viha
                    Returned to initial channel control for viha with new
                     change framework
Dec 17 2003  3.1.0  Fixed initial channel setting on hostap
                    Fixed GPSD support to work with tgpsd