@@ -42,7 +42,7 @@ TcpClient::TcpClient() {
         "bestquality,bestsignal,bestnoise,bestlat,bestlon,bestalt,"
         "atype,ip,datasize,maxseenrate,encodingset,decrypted";
     protocol_default_map["WEPKEY"] = "origin,bssid,key,encrypted,failed";
-    protocol_default_map["CARD"] = "interface,type,username,channel";
+    protocol_default_map["CARD"] = "interface,type,username,channel,id,packets";
 
     sv_valid = 0;
     client_fd = 0;
@@ -591,9 +591,12 @@ int TcpClient::ParseData(char *in_data) {
         char cinfo_type[64];
         char cinfo_username[128];
         int cinfo_channel;
+        int cinfo_id;
+        int cinfo_packets;
 
-        if (sscanf(in_data+hdrlen, "%64s %64s \001%128[^\001]\001 %d\n",
-                   cinfo_interface, cinfo_type, cinfo_username, &cinfo_channel) < 4)
+        if (sscanf(in_data+hdrlen, "%64s %64s \001%128[^\001]\001 %d %d %d\n",
+                   cinfo_interface, cinfo_type, cinfo_username, &cinfo_channel,
+                   &cinfo_id, &cinfo_packets) < 6)
             return 0;
 
         map<string, card_info *>::iterator ciitr = card_map.find(cinfo_username);
@@ -603,12 +606,15 @@ int TcpClient::ParseData(char *in_data) {
             cinfo->type = cinfo_type;
             cinfo->username = cinfo_username;
             cinfo->channel = cinfo_channel;
+            cinfo->id = cinfo_id;
+            cinfo->packets = cinfo_packets;
 
             card_map[cinfo_username] = cinfo;
             card_map_vec.push_back(cinfo);
         } else {
             cinfo = ciitr->second;
             cinfo->channel = cinfo_channel;
+            cinfo->packets = cinfo_packets;
         }
 
     } else {
