@@ -1,3 +1,8 @@
+Dec 27 2003  3.1.0  Fixed remembering probe networks associated by data packets
+                    Added reporting of cardsource id (step 1 of client-
+                     controlled channel locking) over card protocol
+                    Added reporting of number of packets per source over card
+                     protocol
 Dec 25 2003  3.1.0  More README updates
                     Smarter handling of garbage gps values in gpsd
                     Added association of probe networks based on data exchange
